updated pom file

--- a/cafeJDBCProject/pom.xml
+++ b/cafeJDBCProject/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.qa</groupId>
-  <artifactId>firstMavenDemo</artifactId>
+  <artifactId>cafeJDBCProject</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>firstDemo</name>
-  <description>Maven project demo example</description>
+  <description></description>
   
   <!-- This is how you add a comment in xml -->
   <dependencies>
@@ -35,7 +35,15 @@
 	    <artifactId>log4j-api</artifactId>
 	    <version>2.17.2</version>
 	</dependency>
-
+	
+	<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+	<dependency>
+	    <groupId>org.mockito</groupId>
+	    <artifactId>mockito-core</artifactId>
+	    <version>4.5.1</version>
+	    <scope>test</scope>
+	</dependency>
+	
   </dependencies>
   
   
@@ -60,7 +68,7 @@
                             <archive>
                                 <manifest> 
                                     <!-- What is the main class? --> 
-                                    <mainClass>firstMavenDemo.com.qa.main.Runner</mainClass>
+                                    <mainClass>cafeJDBCProject.com.qa.main.JDBCDemoRunner</mainClass>
                                 </manifest>
                             </archive>
                             <descriptorRefs>
